--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -5,11 +5,11 @@
     </div>
  
     <div class="aboveTheFold">
-        <div [ngClass]="{'font90': home.isDesktop}" class="iAm">I am</div>
+        <div [ngClass]="{'font80': home.isDesktop, 'desktopHeadlines90': home.isDesktopXl}" class="iAm">I am</div>
         
         <div class="introContainer">
-            <div [ngClass]="{'font120': home.isDesktop}" class="name">Jacob Hengsbach</div>
-            <div [ngClass]="{'font64': home.isDesktop}" class="job">FRONTEND DEVELOPER</div>
+            <div [ngClass]="{'font88': home.isDesktop, 'desktopHeadlines120': home.isDesktopXl}" class="name">Jacob Hengsbach</div>
+            <div [ngClass]="{'font64': home.isDesktop, 'desktopHeadlines60': home.isDesktopXl}" class="job">FRONTEND DEVELOPER</div>
         </div>
     </div>
 
