--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -9,7 +9,8 @@ $secondColor: rgb(0, 190, 232);
     align-items: center;
     width: 100%;
     color: white;
-
+    font-size: 16px;
+    line-height: 20px;
 
     .vectorFullsreen{
         object-fit: cover;
@@ -27,17 +28,17 @@ $secondColor: rgb(0, 190, 232);
         width: 100vw;
         max-width: 100%;
         height: 60vh;
-        max-width: 100%;
         z-index: 80;
         margin-top: 42px;
+        overflow-x: hidden;
+        overflow-y: hidden;
 
         .imgColorBg, .personalImg{
             width: 100%;
             height: 60vh;
-            max-width: 550px;
             position: absolute;
-            top: 0;
-            left: 0;
+            bottom: 0;
+            right: 0;
             object-fit: contain;
         }
 
@@ -61,26 +62,18 @@ $secondColor: rgb(0, 190, 232);
         padding-left: 10%;
         padding-right: 10%;
 
-
-
         h2{
             font-size: 45px;
             font-weight: 700;
             margin-block-end: 0;
             width: max-content;
-
-
         }
-
-
 
         .personalText{
             display: flex;
             justify-content: space-between;
             align-items: center;
             gap: 37px;
-
-
 
             img{
                 height: 50px;
@@ -89,12 +82,13 @@ $secondColor: rgb(0, 190, 232);
             }
         }
     }
-
-
-
 }
 
 .wrapActive{
     width: calc(40%) !important;
+}
+
+.personalImgDesktop{
+
 }
 
