--- a/src/app/legal-notice/legal-notice.component.html
+++ b/src/app/legal-notice/legal-notice.component.html
@@ -1,4 +1,4 @@
-<div class="helpScreenSection" *ngIf="home.impressOn">
+<div class="helpScreenSection" *ngIf="home.impressOn" [ngClass]="{'textFontDesktop': home.isDesktopXl}">
     <div class="helpScreenSectionHeadline">
         <h1>Impressum</h1>
         <!-- <img onclick="returnToLastActivePage()" class="contactsDetailHeadPic2" src="./img/returnArrowDark.svg"
