--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -69,16 +69,20 @@
                 message :) 
             </button>
 
-
-
             <div class="emailConfirmContainer" *ngIf="emailIsSent">
                 <img src="../../assets/images/icons/checkMark.png" alt="">
                 <span>Your email has been sent successfully. I will get in touch as quickly as possible.</span>
             </div>
+
+            <a class="scrollUp" href="#startScreenContainer">
+                <div></div>
+            </a>
         </form>
     </div>
 
+    
 
+    
 
 
 
