--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,16 +2,16 @@
     <div class="footerContent" [ngClass]="{'directionRow': home.isDesktop ,'justify-between': home.isDesktop}">
         <div class="logo">Ja<span class="c">c</span>o<span class="b">b</span></div>
 
-        <div class="copyRightContainer">@ Jacob Hengsbach 2023</div>
+        <div class="copyRightContainer">© Jacob Hengsbach 2023</div>
 
         <div class="socialMediaContainer">
             <a href="https://github.com/JacobHb99" target="_blank" rel="noopener noreferrer">
                 <img src="../../assets/images/socialIcons/git_icon.png" alt="">
             </a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="#contactSection"  rel="noopener noreferrer">
                 <img src="../../assets/images/socialIcons/mail_icon.png" alt="">
             </a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.linkedin.com/in/jacob-hengsbach-931a9a296/" target="_blank" rel="noopener noreferrer">
                 <img src="../../assets/images/socialIcons/linkedIn_icon.png" alt="">
             </a>
         </div>
