--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,4 +1,4 @@
-<section class="startScreenContainer" *ngIf="!home.impressOn">
+<section id="startScreenContainer" class="startScreenContainer" *ngIf="!home.impressOn">
     <div class="coloredParts">
         <img class="blueColorSpot" src="../../assets/images/coloredBgParts/Purple shadow (2).png" alt="">
         <img class="greenColorSpot" src="../../assets/images/coloredBgParts/Purple shadow (1).png" alt="">
@@ -22,10 +22,10 @@
         <a href="https://github.com/JacobHb99" target="_blank" rel="noopener noreferrer">
             <img src="../../assets/images/socialIcons/git_icon.png" alt="">
         </a>
-        <a href="http://" target="_blank" rel="noopener noreferrer">
+        <a href="#contactSection" rel="noopener noreferrer">
             <img src="../../assets/images/socialIcons/mail_icon.png" alt="">
         </a>
-        <a href="http://" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/jacob-hengsbach-931a9a296/" target="_blank" rel="noopener noreferrer">
             <img src="../../assets/images/socialIcons/linkedIn_icon.png" alt="">
         </a>
     </div>
