--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -13,8 +13,8 @@
         </div>
     </div>
 
-    <div class="talkBtn">
-        <a href="#contactSection">Let's talk!</a>
+    <div class="talkBtn" (click)="home.onClick('contactSection')">
+        <a>Let's talk!</a>
     </div>
 
     <div class="socialMediaContainer">
