--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,16 +1,16 @@
 <section id="aboutMe"  class="aboutMeSection" *ngIf="!home.impressOn" [ngClass]="{'textFontDesktop': home.isDesktopXl}">
-    <img *ngIf="home.isDesktop" class="vectorFullsreen" src="../../assets/images/coloredBgParts/Vector (1).png" alt="">
+    <img *ngIf="home.isDesktop" [ngClass]="{'tabletVector': home.isTablet}" class="vectorFullsreen" src="../../assets/images/coloredBgParts/Vector (1).png" alt="">
 
     <div [ngClass]="{'wrapActive-40': home.isDesktop}" class="aboutMeText">
-        <h2 [ngClass]="{'desktopHeadlines': home.isDesktop || home.isTablet, 'desktopHeadlinesXL': home.isDesktopXl}">About me</h2>
-        <span>
-            Hi I'm Jacob, passionate frontend developer with a special focus on web applications based on angular.
+        <h2 data-aos="fade-right" [ngClass]="{'desktopHeadlines': home.isDesktop || home.isTablet, 'desktopHeadlinesXL': home.isDesktopXl}">About me</h2>
+        <span data-aos="fade-right">
+            Hi I'm Jacob, motivated frontend developer with a special focus on web applications based on angular.
             With the help of the latest technologies, I support you in turning your idea into a finished, unique product.
             <br>
             On my never-ending self-development in the "tec-world", I attach particular importance to a humane approach and an honest commitment to the customer.
         </span>
         
-        <div class="personalText">
+        <div class="personalText" data-aos="fade-right">
             <img src="../../assets/images/icons/light_bulb_blue.png" alt="">
             <span>
                 I belive that every problem should be met with a positive attitude - writing award-winning code does not happen from a "this can't be done" attitude.
@@ -19,7 +19,7 @@
             </span> 
         </div>
 
-        <div class="personalText">
+        <div class="personalText" data-aos="fade-right">
             <img src="../../assets/images/icons/puzzle_blue.png" alt="">
             <span>
                 The beauty of this industry is that it is full of talented and creative people.
