--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,10 @@
-<app-navbar></app-navbar>
-<app-start-screen></app-start-screen>
-<app-about-me></app-about-me>
-<app-my-skills></app-my-skills>
-<app-my-projects></app-my-projects>
-<app-contact></app-contact>
-<app-legal-notice></app-legal-notice>
-<app-footer></app-footer>
+<section [ngClass]="{'fixedBody': mobileNavActice}">
+    <app-navbar></app-navbar>
+    <app-start-screen></app-start-screen>
+    <app-about-me></app-about-me>
+    <app-my-skills></app-my-skills>
+    <app-my-projects></app-my-projects>
+    <app-contact></app-contact>
+    <app-legal-notice></app-legal-notice>
+    <app-footer></app-footer>
+</section>
