--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,7 +2,7 @@ $bgColor: rgb(20, 29, 47);
 $mainColor: rgb(75, 71, 255);
 $secondColor: rgb(0, 190, 232);
 
+.fixedBody{
 
-.hideOverflowY{
-    overflow-y: hidden !important;
 }
+
