--- a/src/app/my-projects/my-projects.component.html
+++ b/src/app/my-projects/my-projects.component.html
@@ -1,19 +1,19 @@
 <section id="projects" *ngIf="!home.impressOn" [ngClass]="{'textFontDesktop': home.isDesktopXl}">
-    <div class="headlineContainer" data-aos="fade-left">
+    <div class="headlineContainer" data-aos="fade-up">
         <div class="blueLineShort"></div>
         <div [ngClass]="{'desktopHeadlines': home.isDesktop || home.isTablet, 'desktopWidth': home.isDesktop}"
             class="headline">Portfolio</div>
         <div class="blueLineLong" [ngClass]="{'lineWidthDesktop': home.isDesktop}"></div>
     </div>
 
-    <div class="portfolioDescription" data-aos="fade-right">
+    <div class="portfolioDescription" data-aos="fade-up" translate="">
         This is a sample of my previous projects.
     </div>
 
     <div class="projectsContainer">
 
         <div class="project" *ngFor="let project of projects; let i = index"
-            [ngClass]="{'justify-between': home.isDesktop}" data-aos="fade-right">
+            [ngClass]="{'justify-between': home.isDesktop}" data-aos="fade-up">
 
             <div class="projectImgContainer" [ngClass]="{'wrapActive-40': home.isDesktop}">
                 <img src="{{ project.path }}" alt="">
@@ -23,7 +23,7 @@
                 [ngClass]="{'alignItemsStart': home.isDesktop, 'wrapActive-60': home.isDesktop}">
                 <div class="projectName">{{ project.project }}</div>
                 <div class="projectSkill">{{ project.skills }}</div>
-                <div [ngClass]="{'text-align-left': home.isDesktop}" class="projectInfo">{{ project.info }}</div>
+                <div [ngClass]="{'text-align-left': home.isDesktop}" class="projectInfo" translate="">{{ project.info | translate }}</div>
 
                 <div class="btnContainer">
                     <a href="{{ project.liveTestPath }}" target="_blank" rel="noopener noreferrer" *ngIf="project.liveTestPath">
