--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,26 +2,26 @@
     <img *ngIf="home.isDesktop" [ngClass]="{'tabletVector': home.isTablet}" class="vectorFullsreen" src="../../assets/images/coloredBgParts/Vector (1).png" alt="">
 
     <div [ngClass]="{'wrapActive-40': home.isDesktop}" class="aboutMeText">
-        <h2 data-aos="fade-right" [ngClass]="{'desktopHeadlines': home.isDesktop || home.isTablet, 'desktopHeadlinesXL': home.isDesktopXl}">About me</h2>
-        <span data-aos="fade-right">
+        <h2 data-aos="fade-up" [ngClass]="{'desktopHeadlines': home.isDesktop || home.isTablet, 'desktopHeadlinesXL': home.isDesktopXl}" translate="">About me</h2>
+        <span data-aos="fade-up" translate="">
             Hi I'm Jacob, motivated frontend developer with a special focus on web applications based on angular.
             With the help of the latest technologies, I support you in turning your idea into a finished, unique product.
             <br>
             On my never-ending self-development in the "tec-world", I attach particular importance to a humane approach and an honest commitment to the customer.
         </span>
         
-        <div class="personalText" data-aos="fade-right">
+        <div class="personalText" data-aos="fade-up">
             <img src="../../assets/images/icons/light_bulb_blue.png" alt="">
-            <span>
+            <span translate="">
                 I belive that every problem should be met with a positive attitude - writing award-winning code does not happen from a "this can't be done" attitude.
                 <br>
                 I am always ready for a new challenge where I can grow as a human and expand my skill stack.
             </span> 
         </div>
 
-        <div class="personalText" data-aos="fade-right">
+        <div class="personalText" data-aos="fade-up">
             <img src="../../assets/images/icons/puzzle_blue.png" alt="">
-            <span>
+            <span translate="">
                 The beauty of this industry is that it is full of talented and creative people.
                 <br>
                 I learn something new every day either by my own curiosity or by like-minded code enthusiasts.
