--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -15,6 +15,7 @@ $secondColor: rgb(0, 190, 232);
     position: relative;
     color: white;
     margin-bottom: 60px;
+
     
     .coloredParts{
         position: absolute;
@@ -26,7 +27,7 @@ $secondColor: rgb(0, 190, 232);
         max-width: 100%;
         height: 140vh;
         box-sizing: border-box;
-        overflow-x: hidden;
+        overflow-x: hidden !important;
 
         .blueColorSpot{
             position: absolute;
